translate quote form up to fix visual error on tablet

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1388,10 +1388,17 @@ nav {
 	position: relative;
 	width:33%;
 
+	@include breakpoint(tablet) {
+
+		@include transform(translate(0, -25px))
+
+	}
+
 	@include breakpoint(medium) {
 
 		width:100%;
 		margin:50px 0;
+		@include transform(translate(0, 0));
 
 	}
 
